# planeten-visualisierungs-programm

./: Cargo.toml
pkg/: index.html  wasm.js  wasm_bg.wasm
src/: entry.rs  main.rs  system.rs  wasm.rs
src/canvas/: grid_shader.wgsl  icosphere.rs  mod.rs  shader.wgsl
