[package]
name = "planeten-visualisierungs-programm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "wasm"
path = "src/wasm.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[profile.release]
panic = "abort"
opt-level = "z"
strip = true
lto = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.72", features = ["Window", "Document", "HtmlCanvasElement"] }
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
console_log = "1.0.0"
web-time = "1.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
simplelog = "0.12.2"
pollster = "0.4.0"

[dependencies]
log = "0.4.22"
wgpu = { version = "24.0.1", features = ["webgl"] }
bytemuck = { version = "1.20.0", features = ["derive"] }
winit = { version = "0.30.5", features = ["rwh_06"], default-features = false }
cgmath = "0.18.0"
